--- a/style.css
+++ b/style.css
@@ -343,6 +343,7 @@ footer {
         .container {
             max-width: 98%;
             padding: 5px;
+            min-height: 120vh;
         }
 
         #contact {
